--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,22 +1,11 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i&subset=latin-ext);
-@import url(https://fonts.googleapis.com/css?family=Exo+2:200,200i,400,400i,600,600i&subset=latin-ext);
+// Relative to stylesheet URL, respects base href
+$fa-font-path: '../fonts';
 
-@import './node_modules/stylebox/scss/stylebox';
-@import './node_modules/font-awesome/scss/font-awesome';
+@import 'node_modules/highlight.js/styles/tomorrow';
+@import 'node_modules/font-awesome/scss/font-awesome';
 
-@import './variables';
-@import './mixins';
+@import 'node_modules/purelib/src/scss/index';
+@import 'node_modules/purelib/src/scss/suggested-variables';
 
-@import './normalize';
-@import './reset';
-@import './layout';
-
-@import './stylebox';
-@import './themes';
-@import './typography';
-@import './tooltip';
-@import './spinner';
-@import './charts';
 @import './misc';
-@import './media-queries';
-@import './datepicker';
+@import './themes';
